Test fix for overflow issue

--- a/src/pages/landing-page/LandingPage.scss
+++ b/src/pages/landing-page/LandingPage.scss
@@ -2,8 +2,7 @@
 
 .landing-page-wrapper{
   box-sizing: border-box;
-  // overflow: hidden;
+  overflow: hidden;
   height: 100%;
   position: relative;
-  // overflow: visible;
 }
