--- a/src/sections/2-about-section/About.scss
+++ b/src/sections/2-about-section/About.scss
@@ -16,6 +16,7 @@
   min-height: calc(100dvh + 100px) !important;
   // min-height: max-content !important;
   // min-height: 100vh;
+  overflow: hidden;
 
   .contact-me-btn{
     display: flex;
