--- a/src/sections/3-projects-section/Projects.scss
+++ b/src/sections/3-projects-section/Projects.scss
@@ -12,6 +12,7 @@
   padding-left: 10vw;
   padding-right: 10vw;
   gap: 5vw;
+  overflow: hidden;
 }
 
 .projects-section-1,
