--- a/src/sections/5-contact-section/Contact.scss
+++ b/src/sections/5-contact-section/Contact.scss
@@ -7,4 +7,5 @@
   padding-left: 5vw;
   padding-right: 5vw;
   box-sizing: border-box;
+  overflow: hidden;
 }
